--- a/src/main/resources/templates/add-movie.html
+++ b/src/main/resources/templates/add-movie.html
@@ -1,56 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
   <title>Add Movie</title>
-  <nav class="movie-nav">
-    <a class="nav-link" href="/add-movie">Add Movie</a>
-    <a class="nav-link" href="/movie-list">Movie List</a>
-    <a class="nav-link" href="/logout">Logout</a>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
+        integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
+        crossorigin="anonymous">
+  <link rel="stylesheet" href="/styles/main-left.css">
+</head>
+
+<body>
+<div class="font-wrapper">
+  <nav class="navbar navbar-expand-md navbar-light bg-light">
+    <div class="container">
+      <a class="navbar-brand" href="/search">Movie Collection</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
+              aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="collapsibleNavId">
+        <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="/add-movie">Add Movie</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/movie-list">Movie List</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+          <li class="nav-item" th:if="${session.loggedIn}">
+            <a href="/logout" class="nav-link">Logout <i class="fa fa-sign-out" aria-hidden="true"></i></a>
+          </li>
+          <li class="nav-item" th:unless="${session.loggedIn}">
+            <a href="/login" class="nav-link">Login <i class="fa fa-user" aria-hidden="true"></i></a>
+          </li>
+          <li class="nav-item" th:unless="${session.loggedIn}">
+            <a href="/register" class="nav-link">Signup <i class="fa fa-user-plus" aria-hidden="true"></i></a>
+          </li>
+        </ul>
+      </div>
+    </div>
   </nav>
 
-</head>
-<body>
-<main class="margin-top">
-  <h3 class="margin-top">Add Movie</h3>
-  <form method="post" action="/add-movie">
-    <div>
-      <label>Title</label>
-      <input name="title" type="text" required>
+  <div class="container container-narrow">
+    <div class="row justify-content-center">
+      <div class="col-lg-8 text-left">
+        <h1 class="font-weight-bold">Add Movie</h1>
+        <form method="post" action="/add-movie">
+          <div class="form-row">
+            <div class="col-md-6 mb-3">
+              <label>Title</label>
+              <input name="title" type="text" required class="form-control form-control-lg">
+            </div>
+            <div class="col-md-6 mb-3">
+              <label>Year</label>
+              <input name="year" type="number" required class="form-control form-control-lg">
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="col-md-6 mb-3">
+              <label>Genre</label>
+              <input name="genre" type="text" required class="form-control form-control-lg">
+            </div>
+            <div class="col-md-6 mb-3">
+              <label>Description</label>
+              <input name="description" type="text" required class="form-control form-control-lg">
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="col-md-6 mb-3">
+              <label>Runtime</label>
+              <input name="runtime" type="number" required class="form-control form-control-lg">
+            </div>
+            <div class="col-md-6 mb-3">
+              <label>Trailer URL</label>
+              <input name="trailerUrl" type="url" required class="form-control form-control-lg">
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="col-md-6 mb-3">
+              <label>Poster URL</label>
+              <input name="posterUrl" type="url" required class="form-control form-control-lg">
+            </div>
+            <div class="col-md-6 mb-3">
+              <label>Actors</label>
+              <input name="actors" type="text" required class="form-control form-control-lg">
+            </div>
+          </div>
+          <div class="form-group">
+            <button class="btn btn-primary red-button" type="submit">Save</button>
+            <button class="btn btn-secondary" type="reset">Clear form</button>
+          </div>
+        </form>
+      </div>
     </div>
-    <div>
-      <label>Year</label>
-      <input name="year" type="number" required>
-    </div>
-    <div>
-      <label>Genre</label>
-      <input name="genre" type="text" required>
-    </div>
-    <div>
-      <label>Description</label>
-      <input name="description" type="text" required>
-    </div>
-    <div>
-      <label>Runtime</label>
-      <input name="runtime" type="number" required>
-    </div>
-    <div>
-      <label>Trailer URL</label>
-      <input name="trailerUrl" type="url" required>
-    </div>
-    <div>
-      <label>Poster URL</label>
-      <input name="posterUrl" type="url" required>
-    </div>
-    <div>
-      <label>Actors</label>
-      <input name="actors" type="text" required>
-    </div>
-    <div>
-      <button class="button green-theme" type="submit">Save</button>
-      <button class="button red-theme" type="reset">Clear form</button>
-    </div>
-  </form>
-</main>
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
+          integrity="sha384-pzjw8f+uaZu2c+0Em+qXlvFqjjr7vAC9N1o0kY/02Dw2Fh8Tv68v3S4gJJqFq6yN"
+          crossorigin="anonymous"></script>
+</div>
 </body>
+
 </html>
