--- a/src/main/resources/templates/movie-list.html
+++ b/src/main/resources/templates/movie-list.html
@@ -1,18 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<header>
-    <head>
+
+<head>
     <meta charset="UTF-8">
     <title>Movie List</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
+          integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
+          crossorigin="anonymous">
+    <link rel="stylesheet" href="/styles/main-left.css">
 </head>
-<nav class="movie-nav">
-    <a class="nav-link" href="/add-movie">Add Movie</a>
-    <a class="nav-link" href="/movie-list">Movie List</a>
-    <a class="nav-link" href="/logout">Logout</a>
-</nav>
-</header>
+
 <body>
-    <main class="container">
+<div class="font-wrapper">
+    <nav class="navbar navbar-expand-md navbar-light bg-light">
+        <div class="container">
+            <a class="navbar-brand" href="/search">Movie Collection</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
+                    aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="collapsibleNavId">
+                <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/add-movie">Add Movie</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/movie-list">Movie List</a>
+                    </li>
+                </ul>
+                <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                    <li class="nav-item" th:if="${session.loggedIn}">
+                        <a href="/logout" class="nav-link">Logout <i class="fa fa-sign-out"
+                                                                     aria-hidden="true"></i></a>
+                    </li>
+                    <li class="nav-item" th:unless="${session.loggedIn}">
+                        <a href="/login" class="nav-link">Login <i class="fa fa-user" aria-hidden="true"></i></a>
+                    </li>
+                    <li class="nav-item" th:unless="${session.loggedIn}">
+                        <a href="/register" class="nav-link">Signup <i class="fa fa-user-plus"
+                                                                       aria-hidden="true"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <main class="container container-narrow">
         <h3>Movie List</h3>
         <div class="container" th:if="${message != null}">
             <div class="bg-success text-white p-3" th:switch="${message}">
@@ -35,5 +71,12 @@
             </ul>
         </section>
     </main>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
+            integrity="sha384-pzjw8f+uaZu2c+0Em+qXlvFqjjr7vAC9N1o0kY/02Dw2Fh8Tv68v3S4gJJqFq6yN"
+            crossorigin="anonymous"></script>
+</div>
 </body>
+
 </html>
