--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -1,35 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Search</title>
-</head>
-<body>
-<header>Search</header>
-<main class="margin-top">
-    <h3 class="margin-top">Search Movie</h3>
-    <form method="post" action="/search">
-        <div>
-            <label>Movie Title</label>
-            <input name="title" type="text">
-        </div>
-        <div>
-            <label>Genre</label>
-            <input name="genre" type="text">
-        </div>
-        <div>
-            <label>Actors</label>
-            <input name="actors" type="text">
-        </div>
-        <div>
-            <label>Rating from</label>
-            <input name="rating" type="number">
-        </div>
-        <div>
-            <button class="button green-theme" type="submit">Search</button>
-        </div>
 
-    </form>
-</main>
+<head>
+    <title>Search</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
+          crossorigin="anonymous">
+    <link rel="stylesheet" href="/styles/main-left.css">
+</head>
+
+<body>
+<div class="font-wrapper">
+    <nav class="navbar navbar-expand-md navbar-light bg-light">
+        <div class="container">
+            <a class="navbar-brand" href="/search">Movie Collection</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
+                    aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="collapsibleNavId">
+                <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/about" class="nav-link">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/search">Search</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/contact">Contact</a>
+                    </li>
+                </ul>
+                <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                    <li class="nav-item" th:if="${session.loggedIn}">
+                        <a href="/logout" class="nav-link">Logout <i class="fa fa-sign-out" aria-hidden="true"></i></a>
+                    </li>
+                    <li class="nav-item" th:unless="${session.loggedIn}">
+                        <a href="/login" class="nav-link">Login <i class="fa fa-user" aria-hidden="true"></i></a>
+                    </li>
+                    <li class="nav-item" th:unless="${session.loggedIn}">
+                        <a href="/register" class="nav-link">Signup <i class="fa fa-user-plus" aria-hidden="true"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <div class="container container-narrow">
+        <div class="row justify-content-center">
+            <div class="col-lg-8 text-left">
+                <h1 class="font-weight-bold">Search</h1>
+                <form method="post" action="/search">
+                    <div class="form-group">
+                        <label>Movie Title</label>
+                        <input name="title" type="text" class="form-control form-control-lg long-input">
+                    </div>
+                    <div class="form-group">
+                        <label>Genre</label>
+                        <input name="genre" type="text" class="form-control form-control-lg long-input">
+                    </div>
+                    <div class="form-group">
+                        <label>Actors</label>
+                        <input name="actors" type="text" class="form-control form-control-lg long-input">
+                    </div>
+                    <div class="form-group">
+                        <label>Rating from</label>
+                        <input name="rating" type="number" class="form-control form-control-lg long-input">
+                    </div>
+                    <div class="form-group">
+                        <button class="btn btn-primary red-button" type="submit">Search</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
+            integrity="sha384-pzjw8f+uaZu2c+0Em+qXlvFqjjr7vAC9N1o0kY/02Dw2Fh8Tv68v3S4gJJqFq6yN"
+            crossorigin="anonymous"></script>
+</div>
 </body>
+
 </html>
