Add review button

--- a/src/main/resources/templates/movie.html
+++ b/src/main/resources/templates/movie.html
@@ -91,6 +91,9 @@
                         </div>
                     </div>
                 </div>
+                <div>
+                    <a href="/add-review" class="btn btn-primary">Add Review</a>
+                </div>
             </div>
         </div>
     </div>
