--- a/src/main/resources/templates/add-review.html
+++ b/src/main/resources/templates/add-review.html
@@ -1,28 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <title>Add Review</title>
-
+  <title>Movie</title>
+  <style>
+    .movie-image {
+      width: 200px;
+      height: 300px;
+    }
+    .movie-info {
+      margin-top: 20px;
+    }
+    .star-rating input[type="radio"] {
+      display: none;
+    }
+    .star-rating label {
+      display: inline-block;
+      font-size: 24px;
+      color: #ccc;
+      cursor: pointer;
+    }
+    .star-rating label:hover,
+    .star-rating label:hover ~ label,
+    .star-rating input[type="radio"]:checked ~ label {
+      color: #ffdd00;
+    }
+  </style>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
+        crossorigin="anonymous">
+  <link rel="stylesheet" href="/styles/main-left.css">
 </head>
+
 <body>
-<header th:replace="~{fragments/header :: not-logged-in-header}"></header>
-<main class="margin-top">
-  <h3 class="margin-top">Add Review</h3>
-  <form method="post" action="/add-review">
-    <div>
-      <label>Description</label>
-      <input name="description" type="text" required>
+<div class="font-wrapper">
+  <nav class="navbar navbar-expand-md navbar-light bg-light">
+    <div class="container">
+      <a class="navbar-brand" href="/search">Movie Collection</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
+              aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="collapsibleNavId">
+        <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+          <li class="nav-item active">
+            <a class="nav-link" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="/about" class="nav-link">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/search">Search</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/contact">Contact</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+          <li class="nav-item" th:if="${session.loggedIn}">
+            <a href="/logout" class="nav-link">Logout <i class="fa fa-sign-out" aria-hidden="true"></i></a>
+          </li>
+          <li class="nav-item" th:unless="${session.loggedIn}">
+            <a href="/login" class="nav-link">Login <i class="fa fa-user" aria-hidden="true"></i></a>
+          </li>
+          <li class="nav-item" th:unless="${session.loggedIn}">
+            <a href="/register" class="nav-link">Signup <i class="fa fa-user-plus" aria-hidden="true"></i></a>
+          </li>
+        </ul>
+      </div>
     </div>
-    <div>
-      <label>Rating</label>
-      <input name="rating" type="number" required>
+  </nav>
+
+  <div class="container container-narrow">
+    <div class="row justify-content-center">
+      <div class="col-lg-8 text-left">
+        <h1 class="font-weight-bold">Movie</h1>
+        <div class="media">
+          <img class="mr-3 movie-image" alt="Movie Poster" th:src="${movie.posterUrl}">
+          <div class="media-body movie-info">
+            <h5 class="mt-0 mb-1">
+              <b th:text="${movie.title}"></b>
+            </h5>
+            <div th:text="${movie.description}"></div>
+            <b>Runtime:</b> <span th:text="${movie.runtime} + ' min'"></span>
+            <div>
+              <b>Year:</b> <span th:text="${movie.year}"></span>
+            </div>
+            <div>
+              <b>Genre:</b> <span th:text="${movie.genre}"></span>
+            </div>
+            <div>
+              <b>Trailer:</b>
+              <div>
+                <iframe width="560" height="315" th:src="${movie.trailerUrl}" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+              </div>
+            </div>
+            <div>
+              <b>Rating:</b> <span th:text="${movie.rating}"></span>
+            </div>
+            <div>
+              <b>Actors:</b> <span th:text="${movie.actors}"></span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 text-left">
+        <h3 class="font-weight-bold">Add Review</h3>
+        <form method="post" action="/add-review">
+          <div class="form-group">
+            <label for="description">Description</label>
+            <input name="description" type="text" class="form-control" required>
+          </div>
+          <div class="form-group">
+            <label for="rating">Rating</label>
+            <div class="star-rating">
+              <input type="radio" id="star5" name="rating" value="5">
+              <label for="star5" title="5 stars"><i class="fa fa-star"></i></label>
+              <input type="radio" id="star4" name="rating" value="4">
+              <label for="star4" title="4 stars"><i class="fa fa-star"></i></label>
+              <input type="radio" id="star3" name="rating" value="3">
+              <label for="star3" title="3 stars"><i class="fa fa-star"></i></label>
+              <input type="radio" id="star2" name="rating" value="2">
+              <label for="star2" title="2 stars"><i class="fa fa-star"></i></label>
+              <input type="radio" id="star1" name="rating" value="1">
+              <label for="star1" title="1 star"><i class="fa fa-star"></i></label>
+            </div>
+          </div>
+          <div class="form-group">
+            <button class="btn btn-primary red-button" type="submit">Save</button>
+            <button class="btn btn-secondary" type="reset">Clear form</button>
+          </div>
+        </form>
+      </div>
     </div>
-    <div>
-      <button class="button green-theme" type="submit">Save</button>
-      <button class="button red-theme" type="reset">Clear form</button>
-    </div>
-  </form>
-</main>
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
+          integrity="sha384-pzjw8f+uaZu2c+0Em+qXlvFqjjr7vAC9N1o0kY/02Dw2Fh8Tv68v3S4gJJqFq6yN"
+          crossorigin="anonymous"></script>
+</div>
 </body>
+
 </html>
