--- a/src/main/resources/templates/movie.html
+++ b/src/main/resources/templates/movie.html
@@ -92,7 +92,7 @@
                     </div>
                 </div>
                 <div>
-                    <a href="/add-review" class="btn btn-primary red-button">Add Review</a>
+                    <a th:href="'/search/'+${movie.id}+'/add-review'" class="btn btn-primary">Add Review</a>
                 </div>
             </div>
         </div>
