--- a/src/main/resources/templates/add-review.html
+++ b/src/main/resources/templates/add-review.html
@@ -26,6 +26,22 @@
     .star-rating input[type="radio"]:checked ~ label {
       color: #ffdd00;
     }
+    .star-rating {
+      direction: rtl;
+    }
+    .review-description {
+      height: 100px;
+    }
+
+    .trailer-container {
+      max-width: 560px;
+      margin: 0 auto;
+    }
+
+    .trailer-container iframe {
+      width: 100%;
+      height: 315px;
+    }
   </style>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet" />
@@ -92,7 +108,7 @@
             </div>
             <div>
               <b>Trailer:</b>
-              <div>
+              <div class="trailer-container">
                 <iframe width="560" height="315" th:src="${movie.trailerUrl}" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
               </div>
             </div>
@@ -107,24 +123,24 @@
       </div>
       <div class="col-lg-4 text-left">
         <h3 class="font-weight-bold">Add Review</h3>
-        <form method="post" th:action="'/search/'+${movie.id}+'/add-review'">
+        <form method="post" action="/add-review">
           <div class="form-group">
             <label>Description</label>
-            <input name="description" type="text" class="form-control" required>
+            <input name="description" type="text" class="form-control review-description" required>
           </div>
           <div class="form-group">
             <label>Rating</label>
             <div class="star-rating">
               <input type="radio" id="star5" name="rating" value="5">
-              <label for="star5" title="5 stars"><i class="fa fa-star"></i></label>
+              <label for="star5" title="5 stars" data-value="5"><i class="fa fa-star"></i></label>
               <input type="radio" id="star4" name="rating" value="4">
-              <label for="star4" title="4 stars"><i class="fa fa-star"></i></label>
+              <label for="star4" title="4 stars" data-value="4"><i class="fa fa-star"></i></label>
               <input type="radio" id="star3" name="rating" value="3">
-              <label for="star3" title="3 stars"><i class="fa fa-star"></i></label>
+              <label for="star3" title="3 stars" data-value="3"><i class="fa fa-star"></i></label>
               <input type="radio" id="star2" name="rating" value="2">
-              <label for="star2" title="2 stars"><i class="fa fa-star"></i></label>
+              <label for="star2" title="2 stars" data-value="2"><i class="fa fa-star"></i></label>
               <input type="radio" id="star1" name="rating" value="1">
-              <label for="star1" title="1 star"><i class="fa fa-star"></i></label>
+              <label for="star1" title="1 star" data-value="1"><i class="fa fa-star"></i></label>
             </div>
           </div>
           <div class="form-group">
