--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -56,14 +56,16 @@
                 <h1 class="font-weight-bold text-lg text-shadow">Movie Collection</h1>
                 <h3 class="text-shadow">Your ultimate movie collection</h3>
                 <hr class="bg-light w-50">
-                <a class="btn btn-light btn-lg" href="/search" role="button"><i class="fa fa-film"
-                                                                                aria-hidden="true"></i> Find your new favourite movie</a>
+                <a class="btn btn-light btn-lg" href="/search" role="button">
+                    <i class="fa fa-film" aria-hidden="true"></i> Find your new favorite movie
+                </a>
+                <div class="banner"></div>
             </div>
         </div>
     </div>
-
-
 </div>
 </body>
+
+</html>
 
 </html>
